<resources>
    <string name="app_name">unit_converter</string>
    <string name="convert">Convert!</string>
    <string name="conversions">Weight Converter!</string>
    <string name="enter_your_weight">ENTER YOUR WEIGHT BELOW:</string>
    <string name="enter_a_number">Enter a number</string>
    <string name="image">TODO</string>
    <string name="pick_a_planet">PICK A PLANET:</string>
</resources>
